Добавлены хендлеры для heatmap (/api/v1/heatmap/all, /api/v1/heatmap/history, /api/v1/heatmap/today). Добавлен swagger и запросы к базе.
